--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "json-server": "^0.16.3",
+    "nock": "^13.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.1",
+    "redux-mock-store": "^1.5.4",
     "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --silent",
     "eject": "react-scripts eject",
     "server": "json-server --watch './db/db.json' --port 3001"
   },
